--- a/package.json
+++ b/package.json
@@ -46,5 +46,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/burakozzdemir/innovance-app.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/burakozzdemir/innovance-app/issues"
+  },
+  "homepage": "https://github.com/burakozzdemir/innovance-app#readme"
 }
