--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
